# tm-tourney-manager

./: .gitignore  Cargo.toml  DW25 - Acchitchi.Map.Gbx  LICENSE  README.md  test_start_match.bat  test_tourney_setup_commands.bat
tm-server-bridge/: .env.example  Cargo.toml
tm-server-bridge/src/: config.rs  main.rs  state.rs  telemetry.rs  test.rs
tm-server-client/: Cargo.toml
tm-server-client/src/: configurator.rs  core.rs  lib.rs  types.rs
tm-server-client/src/configurator/: rounds.rs
tm-server-interface/: Cargo.toml
tm-server-interface/src/: main.rs
tm-server-interface/src/module_bindings/: client_connected_reducer.rs  custom_type.rs  end_map_end_type.rs  end_map_start_type.rs  end_round_end_type.rs  end_round_start_type.rs  event_type.rs  give_up_type.rs  identity_disconnected_reducer.rs  loading_map_end_type.rs  loading_map_start_type.rs  map_type.rs  message_table.rs  message_type.rs  mod.rs  play_loop_end_type.rs  play_loop_start_type.rs  player_type.rs  podium_type.rs  post_event_reducer.rs  respawn_type.rs  round_time_type.rs  scores_type.rs  send_message_reducer.rs  send_message_sched_reducer.rs  send_message_schedule_table.rs  send_message_schedule_type.rs  server_events_table.rs  server_events_type.rs  server_status_type.rs  server_table.rs  server_type.rs  set_name_reducer.rs  start_line_type.rs  start_map_type.rs  start_turn_type.rs  team_type.rs  unloading_map_end_type.rs  unloading_map_start_type.rs  user_table.rs  (+3 more)
tm-server-interface/src/tourney_api_gen/: add_event_reducer.rs  create_tournament_reducer.rs  event_status_type.rs  event_template_table.rs  event_template_type.rs  event_type.rs  map_type.rs  match_status_type.rs  matches_table.rs  mod.rs  player_type.rs  respawn_type.rs  send_message_sched_reducer.rs  send_message_schedule_type.rs  server_command_type.rs  server_event_table.rs  server_event_type.rs  server_events_table.rs  server_events_type.rs  server_status_type.rs  server_table.rs  server_type.rs  stage_template_type.rs  start_line_type.rs  tournament_event_type.rs  tournament_stage_table.rs  tournament_stage_type.rs  tournament_table.rs  tournament_type.rs
tm-server-types/: Cargo.toml
tm-server-types/src/: base.rs  config.rs  event.rs  lib.rs  method.rs
tm-server-types/src/base/: map.rs  player.rs  team.rs  time.rs
tm-server-types/src/config/: common.rs  rounds.rs
tm-server-types/src/event/: custom.rs  give_up.rs  map.rs  play_loop.rs  player.rs  podium.rs  respawn.rs  round.rs  scores.rs  start_line.rs  turn.rs  warm_up.rs  way_point.rs
tm-tourney-manager/: Cargo.toml  chat.html  diesel.toml
tm-tourney-manager-api/: Cargo.toml
tm-tourney-manager-api-rs/: Cargo.toml
tm-tourney-manager-api-ts/: README.md  package.json  tsconfig.json
tm-tourney-manager-api-ts/src/: add_event_reducer.ts  add_stage_reducer.ts  assign_server_reducer.ts  event_config_table.ts  event_config_type.ts  event_stage_table.ts  event_stage_type.ts  index.ts  match_status_type.ts  match_status_variants.ts  match_template_type.ts  on_tournament_event_schedule_reducer.ts  player_chat_type.ts  player_connect_type.ts  player_disconnect_type.ts  provision_match_reducer.ts  rounds_type.ts  server_config_type.ts  stage_match_table.ts  stage_match_type.ts  tm_server_event_type.ts  tm_server_table.ts  tm_server_type.ts  tournament_event_schedule_callback_reducer.ts  tournament_event_schedule_table.ts  tournament_event_type.ts  tournament_status_variants.ts  tournament_type.ts  try_start_reducer.ts  user_type.ts
tm-tourney-manager/src/: entity.rs  event.rs  leaderboard.rs  lib.rs  main.rs  match.rs  monitoring.rs  registry.rs  server.rs  stage.rs  tournament.rs  user.rs
tm-tourney-manager/src/event/: scheduling.rs
tm-tourney-manager/src/server/: config.rs  event.rs  state.rs
tm-tourney-manager/src/tournament/: registration.rs
