[workspace]
resolver = "3"
members = ["tm-server-client", "tm-server-types", "tm-tourney-manager"]

package.authors = ["kistz (Kilian Strunz)"]
package.categories = ["api-bindings", "network-programming", "asynchronous"]
package.keywords = ["trackmania", "nadeo", "gbxremote", "gbx", "api"]
package.edition = "2024"
package.license = "MIT OR Apache-2.0"
