[package]
name = "tm-server-bridge"
publish = false

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "*", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tm-server-client = { path = "../tm-server-client" }
spacetimedb-sdk = "*"
hex = "0.4"
tm-tourney-manager-api-rs = { path = "../tm-tourney-manager-api-rs" }

nadeo-api = "*"
