[package]
name = "tm-server-bridge"
publish = false

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "*", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tm-server-client = { path = "../tm-server-client" }
spacetimedb-sdk = "*"
hex = "0.4"
tm-tourney-manager-api-rs = { path = "../tm-tourney-manager-api-rs" }

nadeo-api = "*"

# Implements the types defined in the Otel spec
opentelemetry = "0.31"
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = "0.32"
opentelemetry-otlp = "0.31"
# Allows you to export data to Jaeger
opentelemetry-jaeger-propagator = "0.31"

[dev-dependencies]
testcontainers = { version = "*", features = ["blocking"] }
insta = { version = "*" }
