[package]
name = "tm-server-client"
description = "Call methods on and receive events from a trackmania server."
readme = "README.md"

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
publish = true

[dependencies]
tm-server-types = { path = "../tm-server-types", features = ["serde"] }

tokio = { version = "*", features = ["full"] }
bytes = "1"

serde = { version = "1", features = ["derive"] }
# Renamed to json because maybe swtich to simd-json
json = { package = "serde_json", version = "*" }
dxr = { version = "0", features = [] }
quick-xml = { version = "*", features = ['serialize'] }

base64 = "*"

dashmap = "*"

thiserror = "*"
