[package]
name = "tm-server-interface"
publish = false

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "*", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tm-server-client = { path = "../tm-server-client" }
spacetimedb-sdk = "1.3.2"
hex = "0.4"
