[package]
name = "tm-server-types"

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
spacetimedb-lib = { version = "*", optional = true }
serde = { version = "*", optional = true }


[features]
serde = ["dep:serde"]
spacetime = ["dep:spacetimedb-lib"]
