[package]
name = "tm-server-types"
publish = true
description = "Types used by Trackmania servers XML-RPC."

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
spacetimedb-lib = { version = "*", optional = true }

serde = { version = "*", optional = true }
# Renamed to json because maybe swtich to simd-json
json = { package = "serde_json", version = "*" }


[features]
default = ["serde"]
serde = ["dep:serde"]
spacetime = ["dep:spacetimedb-lib"]
