[package]
name = "tm-tourney-manager"
publish = false

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true


[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
spacetimedb = { version = "*" }
tm-server-types = { path = "../tm-server-types", features = ['spacetime'] }

[features]
default = ["development"]
development = []
